# smartFactory-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh  release-wasm.sh
.github/workflows/: rust.yml
smart-factory-environment/: Cargo.toml
smart-factory-environment/src/: agent.rs  empty_environment.rs  environment.rs  event.rs  event_engine.rs  event_queue.rs  lib.rs  message.rs
smart-factory-front-end/: package-lock.json  package.json
smart-factory-front-end/src/: App.css  App.tsx
smart-factory-server/: Cargo.toml
smart-factory-server/src/: main.rs
smart-factory-wasm-port/: Cargo.toml
smart-factory-wasm-port/src/: lib.rs
smart-factory-wasm-port/tests/: web.rs
