[workspace]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/ankokovin/smartFactory-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
    "smart-factory-wasm-port",
    "smart-factory-environment",
    "smart-factory-server"
]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 's'