[package]
name = "smart-factory-environment"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ankokovin/smartFactory-Rust"
authors = ["Aleksey Kokovin rycarok@gmail.com"]

[dependencies]
priority-queue = "*"
uuid = { version="*", features=["v4","js"]}
async-trait = "0.1.56"

[dev-dependencies]
tokio = { version="1.19.2", features=["rt", "macros", "time"]}
futures = "0.3.21"