[package]
name = "smart-factory-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-factory-environment = { path = "../smart-factory-environment" }
tokio = { version = "1.19.0", features = ["full"] }
warp = "0.3.2"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.1", features = ["serde", "v4"] }