[package]
name = "smart-factory-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ankokovin/smartFactory-Rust"
authors = ["Aleksey Kokovin rycarok@gmail.com"]

[dependencies]
smart-factory-environment = { path = "../smart-factory-environment" }
tokio = { version = "1.19.0", features = ["full"] }
futures = { version = "0.3", default-features = false }
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
log = "0.4.17"